# rust-webassembly-component-model

./: Cargo.toml
src/: main.rs
test-component/: Cargo.toml  build_component.sh  shopping-cart-component.wasm  tutorial-component.wasm
test-component/src/: lib.rs
test-component/wit/: host.wit
